# map_gen

./: .gitignore  README.md  clear.sh  reference_points.py  run.sh  run_v2.sh  save.sh  undo.sh
src/map_generator/: CMakeLists.txt
src/map_generator/launch/: map_generator.launch  map_generator_v2.launch
src/map_generator/rviz/: map_generator.rviz
src/map_generator/src/: click_map.cpp  click_map_v2.cpp  map_recorder.cpp
src/map_pcl/: CMakeLists.txt  package.xml
src/map_pcl/config/: get_position.rviz
src/map_pcl/launch/: get_position.launch  pub_pcl.launch
src/map_pcl/pcd/: denser.py
src/map_pcl/src/: pcd_to_pointcloud.cpp  visual_pcl.cpp
